# RadioScatter

./: .gitignore  CMakeLists.txt  EventTree.cc  EventTree.hh  IceRayTracing.cc  IceRayTracing.hh  LinkDef.h  Makefile  README  README.md  README~  RSEventSummary.cc  RSEventSummary.hh  RadioScatter.cc  RadioScatter.cc~  RadioScatter.hh  RadioScatter.hh~  RadioScatterEvent.cc  RadioScatterEvent.hh  install.sh
doc/: Doxyfile  doc.dox  output_test_1000MHz_100W.root  output_test_1000MHz_100W_10ns.root  output_test_1000MHz_100W_10ns_summary.root  output_test_1000MHz_100W_summary.root  output_test_2100MHz_100W_3ns.root  output_test_2100MHz_100W_3ns_summary.root  output_test_2500MHz_100W_3ns.root  output_test_2500MHz_100W_3ns_summary.root  output_test_500MHz_1000W_3ns.root  output_test_500MHz_1000W_3ns_summary.root  output_test_500MHz_100W_3ns.root  output_test_500MHz_100W_3ns_summary.root  output_test_500MHz_10W_3ns.root  output_test_500MHz_10W_3ns_summary.root  raytrace_test_1000MHz_10000W_10ns.root  raytrace_test_1000MHz_10000W_10ns_summary.root  raytrace_test_1000MHz_10000W_1ns.root  raytrace_test_1000MHz_10000W_1ns_summary.root  raytrace_test_1000MHz_100W_0ns.root  raytrace_test_1000MHz_100W_0ns_summary.root  raytrace_test_1000MHz_100W_10ns.root  raytrace_test_1000MHz_100W_10ns_summary.root  raytrace_test_1000MHz_100W_1ns.root  raytrace_test_1000MHz_100W_1ns_summary.root  raytrace_test_1000MHz_101W_1ns.root  raytrace_test_1000MHz_101W_1ns_summary.root  raytrace_test_1000MHz_10W_0ns.root  raytrace_test_1000MHz_10W_0ns_summary.root  raytrace_test_100MHz_100W_1ns.root  raytrace_test_100MHz_100W_1ns_summary.root
example/: #scatterFromCascade.cc#  .#scatterFromCascade.cc  DirectRay.txt  ReflectedRay.txt  RefractedRay.txt  exampleRayTrace  exampleRayTrace.cc  scatterFromCascade  scatterFromCascade.cc  scatterFromCascadeMultiple.cc  singleparticle  singleparticle.cc  uzairRayTrace.cc
example/GEANT4/nrt/: CMakeLists.txt  effectivevol.mac  gui.mac  icecube.mac  nrt.cc  old_Cmakelists.txt  single.mac
example/GEANT4/nrt/include/: RSmessenger.hh
example/GEANT4/nrt/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  RSmessenger.cc  RunAction.cc  SteppingAction.cc
example/GEANT4/slac_rf/: CMakeLists.txt  run1.mac  slac.cc
example/GEANT4/slac_rf/include/: Analysis.hh  DetectorConstructionT510tgt.hh  DetectorConstruction_ice.hh  EventAction.hh  RSmessenger.hh
example/GEANT4/slac_rf/src/: .#RunAction.cc  ActionInitialization.cc  DetectorConstructionT510tgt.cc  EventAction.cc  OpNovicePhysicsList.cc  PrimaryGeneratorAction.cc  RSmessenger.cc  RunAction.cc  SimplePhysicsList.cc  SteppingAction.cc
include/: IceRayTracing.hh  RSEventSummary.hh  RadioScatter.hh  RadioScatterEvent.hh  TUtilRadioScatter.hh
macro/: plotEvent.cc  plotRadioScatterSimple.cc
nrt/: CMakeLists.txt  anglemacro.mac  collisionmacro.mac  effectivevol.mac  nrt.cc  run3.mac  surface_array.mac  threshmacro.mac  vis_old.mac
nrt/include/: ActionInitialization.hh  EventAction.hh  RSmessenger.hh  RunAction.hh  global_vars.h
nrt/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  OpNovicePhysicsList.cc  PrimaryGeneratorAction.cc  RSmessenger.cc  RunAction.cc  SteppingAction.cc  physicslist.cc
slac_rf/: #run3.mac#  CMakeLists.txt  CMakeLists.txt~  DetectorConstruction_ice.cc  anglet576.mac  gui.mac~  init_vis.mac  run1.mac  run1.mac~  run3.mac  slac.cc  slac.cc~  t576.mac  t576run2.mac  threshmacro.mac  threshscan.cc  vis.mac  vis.mac~
slac_rf/include/: ActionInitialization.hh  ActionInitialization.hh~  DetectorConstruction.hh  DetectorConstruction.hh~  EventAction.hh~  PrimaryGeneratorAction.hh  RSmessenger.hh  RSmessenger.hh~  RunAction.hh~  SimplePhysicsList.hh  SteppingAction.hh  SteppingAction.hh~  physicslist.hh
slac_rf/src/: #RunAction.cc#  ActionInitialization.cc  ActionInitialization.cc~  DetectorConstruction.cc~  DetectorConstruction.yyyy  DetectorConstructionT510tgt.cc  DetectorConstructionT510tgt.cc~  EventAction.cc  EventAction.cc~  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc~  RSmessenger.cc  RSmessenger.cc~  RunAction.cc  RunAction.cc~  SteppingAction.cc  SteppingAction.cc~  physicslist.cc~
src/: IceRayTracing.cc  RSEventSummary.cc  RadioScatter.cc  RadioScatterEvent.cc  TUtilRadioScatter.cc
